# gravo-mg-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
src/cpp/: core.cpp
src/gravomg/: __init__.py  core.py  sampling.py  util.py
tests/: requirements.txt  test.py
